Switch to new server CDN URL scheme

--- a/Squares/index.html
+++ b/Squares/index.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <canvas/>
-        <script type="text/javascript" src="lib/js/jquery.min.js"></script>
-        <script type="text/javascript" src="lib/js/jcanvas.min.js"></script>
+        <script type="text/javascript" src="/.cdn/js/jquery.min.js"></script>
+        <script type="text/javascript" src="/.cdn/js/jcanvas.min.js"></script>
         <script type="text/javascript" src="res/js/squares.js"></script>
     </body>
 </html>
